# family-portal

./: README.md  SPEC.md  pyproject.toml
PHP + JS/: README.md  composer.json  package-lock.json  package.json
PHP + JS/app/Enums/: SubtaskStatus.php
PHP + JS/app/Models/: ActivityLog.php  Attachment.php  Device.php  Subtask.php  User.php
PHP + JS/app/Providers/: AppServiceProvider.php
PHP + JS/app/Services/: PlanImportService.php
PHP + JS/bootstrap/: app.php
PHP + JS/database/factories/: ActivityLogFactory.php  ApprovalFactory.php  (+3 more)
PHP + JS/routes/: console.php  web.php
alembic/: README  env.py
alembic/versions/: 274e47a135b1_create_core_tables.py
app/: main.py
app/api/: admin.py  public.py  review.py  uploads.py
app/core/: activity_log.py  config.py  db.py  device.py  imaging.py  locking.py  markdown_import.py  security.py  xp.py
app/models/: activity.py  approvals.py  attachments.py  base.py  devices.py  plans.py  tasks.py  users.py  xp.py
app/templates/: admin_activity.html  admin_devices.html  admin_import.html  base.html  board.html  plan.html  review.html
deploy/nginx/: README.md  family-portal.conf
deploy/systemd/: family-portal-backup.service  family-portal-backup.timer
laravel-app/: .env.example  README.md  package-lock.json  phpunit.xml  vite.config.js
laravel-app/config/: database.php  family.php  ui.php
scripts/: backup.sh  bootstrap_pi.sh  deploy_laravel_pi.sh  install.sh  install_nginx_config.sh
tests/: test_admin_import.py  test_imaging.py  test_locking.py  test_markdown_import.py  test_review.py  test_xp.py
(+85 files in other folders)
