[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "family-portal"
version = "0.1.0"
description = "Local-only family task portal"
requires-python = ">=3.11"

[tool.setuptools]
py-modules = []

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlmodel = "^0.0.22"
alembic = "^1.13.2"
jinja2 = "^3.1.4"
pillow = "^10.4.0"
python-multipart = "^0.0.9"

[tool.uvicorn]
factory = false
