[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "family-portal"
version = "0.1.0"
description = "Local-only family task portal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn>=0.30.0,<0.31.0",
    "sqlmodel>=0.0.22,<0.0.23",
    "alembic>=1.13.2,<1.14.0",
    "jinja2>=3.1.4,<3.2.0",
    "pillow>=10.4.0,<10.5.0",
    "python-multipart>=0.0.9,<0.0.10",
]

[tool.setuptools]
py-modules = []

[tool.uvicorn]
factory = false
